[gd_scene load_steps=4 format=3 uid="uid://ck7r3rovxwri6"]

[ext_resource type="Script" uid="uid://7sfmpopwah0n" path="res://script/line_test.gd" id="1_hyfil"]
[ext_resource type="PackedScene" uid="uid://c41u7uobk6d2d" path="res://scene/line_segment.tscn" id="1_y1qme"]

[sub_resource type="SphereShape3D" id="SphereShape3D_hyfil"]
radius = 1.2

[node name="Node3D" type="Node3D"]
script = ExtResource("1_hyfil")

[node name="LineStart" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
gravity_scale = 0.0
freeze = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="LineStart"]
shape = SubResource("SphereShape3D_hyfil")

[node name="JointStart" type="PinJoint3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
node_a = NodePath("../LineSegment")
node_b = NodePath("../LineStart")

[node name="LineSegment" parent="." instance=ExtResource("1_y1qme")]

[node name="JointEnd" type="PinJoint3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3, 0)
node_b = NodePath("../LineEnd")

[node name="LineEnd" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3, 0)
mass = 100.0
gravity_scale = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="LineEnd"]
shape = SubResource("SphereShape3D_hyfil")
